<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Check MDM supported</string>

    <string name="pref_summary_string_param">On/Off state : %1$s</string>
    <string name="pref_summary_boolean_param">On/Off state : %1$b</string>
    <string name="pref_summary_not_supported">Not supported</string>

    <!-- Security Settings -->
    <string name="pref_header_security">Security</string>
    <string name="pref_title_lock_below_option">Whether to lock the options below</string>
    <string name="pref_title_unknown_sources">Unknown sources</string>
    <string name="pref_title_disallow_unknown_sources">Disallow unknown sources</string>
    <string name="pref_title_enabled_screen_capture">Enabled screen capture</string>
    <string name="pref_title_disallow_camera">Disallow camera</string>
    <string name="pref_title_disallow_factory_reset">Disallow factory reset</string>
    <string name="pref_title_factory_reset">Factory reset</string>
    <string name="pref_summary_factory_reset">This will erase all data from your phone\'s internal storage</string>
    <string name="pref_message_factory_reset">Do you want to proceed with a factory reset?</string>

    <!-- Network Settings -->
    <string name="pref_header_network">Wireless &amp; networks</string>
    <string name="pref_title_enabled_nfc">NFC</string>
    <string name="pref_title_airplane_mode">Airplane mode</string>
    <string name="pref_title_enabled_wifi_on_sleep">Keep WLAN on during sleep</string>
    <string-array name="enabled_wifi_on_sleep_entries">
        <item>Always</item>
        <item>Only when plugged in</item>
        <item>Never</item>
    </string-array>
    <string name="pref_title_enabled_wifi">WLAN</string>

    <!-- Display Settings -->
    <string name="pref_header_display">Display</string>
    <string name="pref_title_brightness_level">Brightness level (%1$03d:%2$03d)</string>
    <string name="pref_title_auto_rotate">When device is rotated</string>
    <string name="pref_auto_rotate_rotate">Rotate the contents of the screen</string>
    <string name="pref_auto_rotate_stay_in_portrait">Stay in portrait view</string>
    <string name="pref_auto_rotate_stay_in_landscape">Stay in landscape view</string>
    <string name="pref_auto_rotate_stay_in_current">Stay in current orientation</string>
    <string name="pref_title_screen_timeout">Sleep</string>
    <string name="pref_summary_screen_timeout">After <xliff:g id="timeout_description">%1$s</xliff:g> of inactivity</string>
    <string-array name="screen_timeout_entries">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="screen_timeout_values" translatable="false">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1800000</item>
        <item>-1</item>
    </string-array>

    <!-- Development Settings -->
    <string name="pref_header_development">Developer options</string>
    <string name="pref_title_keep_screen_on">Stay awake</string>
    <string name="pref_summary_keep_screen_on">Screen will never sleep while charging</string>
    <string name="pref_title_mock_location_app">Select mock location app</string>
    <string name="no_application">Nothing</string>
    <string name="select_application">Select application</string>
    <string name="pref_summary_mock_location_app_not_set">No mock location app set</string>
    <string name="pref_summary_mock_location_app_set">Mock location app: <xliff:g id="app_name">%1$s</xliff:g></string>
    <string name="pref_title_uninstall_block">Uninstall block</string>
    <string name="pref_summary_uninstall_block">To change the app\'s permission to prevent deletion</string>
    <string name="pref_title_uninstall_app">Uninstall application</string>
    <string name="pref_summary_uninstall_app">Uninstall selected apps in this device</string>
    <string name="pref_title_hide_app">Hide application</string>
    <string name="pref_summary_hide_app">Hide selected apps in the launcher</string>
    <string name="pref_title_disable_app">Disable application</string>
    <string name="pref_summary_disable_app">Disable selected apps in this device</string>

    <!-- Notification Settings -->
    <string name="pref_header_notification">Sound &amp; notification</string>
    <string name="pref_title_media_volume">Media volume (%1$02d:%2$02d)</string>
    <string name="pref_title_alarm_volume">Alarm volume (%1$02d:%2$02d)</string>
    <string name="pref_title_ring_volume">Ring volume (%1$02d:%2$02d)</string>
    <string name="pref_title_notification_volume">Notification volume (%1$02d:%2$02d)</string>
    <string name="pref_title_dialpad_tones">Dial pad tones</string>
    <string name="pref_title_screen_locking_sounds">Screen locking sounds</string>
    <string name="pref_title_charging_sounds">Wireless Charging sounds</string>
    <string name="pref_title_docking_sounds">Docking sounds</string>
    <string name="pref_title_touch_sounds">Touch sounds</string>
    <string name="pref_title_vibrate_on_touch">Vibrate on touch</string>
    <string name="pref_title_dock_audio_media">Dock speaker plays</string>
    <string-array name="dock_audio_media_entries">
        <item>All audio</item>
        <item>Media audio only</item>
    </string-array>
    <string-array name="dock_audio_media_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_emergency_tones">Emergency tones</string>
    <string-array name="emergency_tones_entries">
        <item>Silent</item>
        <item>Alert</item>
        <item>Vibrate</item>
    </string-array>
    <string-array name="emergency_tones_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
