<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="device.sdk.sample.mdm.NetworkPreferenceFragment"
        android:title="@string/pref_header_network" />

    <header
        android:fragment="device.sdk.sample.mdm.DisplayPreferenceFragment"
        android:title="@string/pref_header_display" />

    <header
        android:fragment="device.sdk.sample.mdm.NotificationPreferenceFragment"
        android:title="@string/pref_header_notification" />

    <header
        android:fragment="device.sdk.sample.mdm.SecurityPreferenceFragment"
        android:title="@string/pref_header_security" />

    <header
        android:fragment="device.sdk.sample.mdm.DevelopmentPreferenceFragment"
        android:title="@string/pref_header_development" />

</preference-headers>
